@@ -1,10 +1,11 @@
 #ifndef SYX_PLATFORM_H
 #define SYX_PLATFORM_H
 
-#define SYX_STRINGIFY(s) #s
+#define SYX_XSTRINGIFY(s) #s
+#define SYX_STRINGIFY(s) SYX_XSTRINGIFY(s)
 
-#define SYX_IMAGE_PATH_S "" SYX_STRINGIFY(SYX_IMAGE_PATH)
-#define SYX_ROOT_PATH_S "" SYX_STRINGIFY(SYX_ROOT_PATH)
+#define SYX_IMAGE_PATH SYX_STRINGIFY(IMAGE_PATH)
+#define SYX_ROOT_PATH SYX_STRINGIFY(ROOT_PATH)
 
 /* Some platform specific informations */
 
